--- a/css/main.scss
+++ b/css/main.scss
@@ -6,3 +6,49 @@
         }
     }
 }
+.modal-client{
+    .client-data{
+        p{
+            margin: 0;
+        }
+    }
+}
+main{
+    /* .client-content{
+        display: flex;
+    } */
+    .client-group{
+        .list-group{
+            max-width: 25rem;
+        }
+/*         ol{
+            max-width: 24rem;
+        } */
+    }
+}
+/* TimeLine strat */
+.timeline {
+    border-left: 1px solid hsl(0, 0%, 90%);
+    position: relative;
+    list-style: none;
+  }
+  
+  .timeline .timeline-item {
+    position: relative;
+  }
+  
+  .timeline .timeline-item:after {
+    position: absolute;
+    display: block;
+    top: 8px;
+  }
+  
+  .timeline .timeline-item:after {
+    background-color: hsl(0, 0%, 90%);
+    left: -38px;
+    border-radius: 50%;
+    height: 11px;
+    width: 11px;
+    content: "";
+  }
+  /* TimeLine end */
