--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,16 @@
         p{
             margin: 0;
         }
+        textarea{
+            width: 100%;
+            height: 7rem;
+        }
+    }
+    .client-documents{
+        overflow-x: scroll;
+        img{
+            max-width: 7rem;
+        }
     }
 }
 main{
