add modal for Users

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,6 +17,18 @@
         }
     }
 }
+#Users{
+    .UsersLogo{
+        i{
+            font-size: 4rem;
+        }
+    }
+    .UserChildButton{
+        i{
+            font-size: 20px;
+        }
+    }
+}
 #ClientDocumentsModal{
     #myCarousel{
         img{
